--- a/careconnect/src/main/resources/application.properties
+++ b/careconnect/src/main/resources/application.properties
@@ -10,4 +10,6 @@ logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 jwt.secret=careconnect_secret_key
 jwt.expiration=86400000
+# Default active profile is local (mysql)
+spring.profiles.active=default
 
