Make mvnw executable and add application-render.properties

--- a/careconnect/src/main/resources/application-render.properties
+++ b/careconnect/src/main/resources/application-render.properties
@@ -1,20 +1,16 @@
-# ==============================
-# Render PostgreSQL Configuration
-# ==============================
+spring.application.name=careconnect
 
+# PostgreSQL on Render
 spring.datasource.url=jdbc:postgresql://dpg-d2l98b75r7bs73den0f0-a:5432/careconnectdb
 spring.datasource.username=careconnect_user
 spring.datasource.password=lFtwJUevNCH0dmivXS2gvrSJofHRIjTe
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-# JPA / Hibernate Configuration
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+# JPA / Hibernate
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
-# Connection Pool (HikariCP)
-spring.datasource.hikari.maximum-pool-size=10
-spring.datasource.hikari.minimum-idle=2
-spring.datasource.hikari.idle-timeout=30000
-spring.datasource.hikari.max-lifetime=1800000
-spring.datasource.hikari.connection-timeout=86400000
+# JWT (can use same as local)
+jwt.secret=careconnect_secret_key
+jwt.expiration=86400000
